manifests/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kraftwerk_service
spec:
  selector:
    app: kraftwerk
  ports:
    - port: 8080
      targetPort: 8080
